# hypercompress

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
gui/: package-lock.json  package.json
gui/src/: index.html  main.js  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs  main.rs
gui/src-tauri/windows/: context-menu.reg  installer-hooks.nsh  uninstall-context-menu.reg
gui/src-tauri/windows/shellext/: .gitignore  AppxManifest.xml  HCShellExt.msix  HyperCompress.cer  README.md  generate-cert.ps1  install-shellext.ps1  sign-package.ps1  uninstall-shellext.ps1
hc_shellext/: Cargo.toml
hc_shellext/src/: commands.rs  lib.rs  util.rs
src/: archive.rs  chunk.rs  compress.rs  crypto.rs  decompress.rs  dictionary.rs  fingerprint.rs  format.rs  lib.rs  main.rs
src/entropy/: ans.rs  lz_optimal.rs  mod.rs  order1.rs
src/transform/: bcj.rs  bitplane.rs  bwt.rs  delta.rs  float_split.rs  mod.rs  mtf.rs  precomp.rs  prediction.rs  rle.rs  struct_split.rs  transpose.rs  zero_rle.rs
tests/: roundtrip.rs
