[package]
name = "hypercompress"
version = "0.1.0"
edition = "2021"
description = "Autonomous content-aware compression engine"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
rayon = "1.10"
xxhash-rust = { version = "0.8", features = ["xxh32", "xxh64"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
