[package]
name = "hc_shellext"
version = "0.1.0"
edition = "2021"
description = "HyperCompress Windows 11 Shell Extension"
license = "MIT"

[lib]
name = "hc_shellext"
crate-type = ["cdylib"]

[dependencies]
windows-core = "0.58"

[dependencies.windows]
version = "0.58"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_Storage_FileSystem",
    "Win32_Globalization",
    "Win32_Security",
]

